Fix header size on smaller breakpoints

--- a/sass/_section.scss
+++ b/sass/_section.scss
@@ -29,3 +29,15 @@ section {
 	}
 }
 
+@include media-breakpoint-down(sm) {
+	section {
+		h1 {
+			font-size: 3.75rem;
+		}
+
+		h2 {
+			font-size: 2.5rem;
+		}
+	}
+}
+
